update leetcode two sum

--- a/content/go/leetcode/1/1.md
+++ b/content/go/leetcode/1/1.md
@@ -1,3 +1,135 @@
 # Two Sum
 
 最简单的题目了，但是一开始却没有找到最优的思路。
+
+## 思路1
+
+最开始的思路是先排序数据o(nlogn)，然后使用游标从两头向中间遍历计算o(n)，直到找到sum等于target的两个下标，因为排序时候需要保留下标，自定义struct结构体保留数据值和下标，整个过程略显麻烦。
+
+```go
+package main
+
+import (
+	"sort"
+)
+
+type ITEM struct {
+	index int
+	value int
+}
+
+type ITEMS []ITEM
+
+func twoSum(nums []int, target int) []int {
+	if len(nums) < 2 {
+		return []int{0, 0}
+	}
+
+	// covert to ITEMS
+	items := make(ITEMS, 0)
+	for i, n := range nums {
+		items = append(items, ITEM{index: i, value: n})
+	}
+	
+	// sort
+	sort.Sort(items)
+	
+	// find the index
+	i, j := 0, len(items)-1
+	sum := items[i].value + items[j].value
+	for i < j && sum != target {
+		if sum < target {
+			i++
+		} else {
+			j--
+		}
+		sum = items[i].value + items[j].value
+	}
+	if sum == target {
+		return []int{items[i].index, items[j].index}
+	} else {
+		return []int{0, 0}
+	}
+}
+
+func (n ITEMS) Len() int {
+	return len(n)
+}
+
+func (n ITEMS) Less(i, j int) bool {
+	return n[i].value < n[j].value
+}
+
+func (n ITEMS) Swap(i, j int) {
+	n[i], n[j] = n[j], n[i]
+}
+```
+
+## 思路2
+
+经过查看题解后，有算法可以在o(n)解决的。主要的思想就是用map查找，首先数组转为map，key为述职，value为下标。当遍历数组时候，判断其差值是否在map中，返回map中则对应的下标，代码简洁明了。
+
+```go
+package solution
+
+func twoSum(nums []int, target int) []int {
+	if len(nums) < 2 {
+		return []int{0, 0}
+	}
+	// generate the value map
+	// if nums = [3, 2, 4], target = 6, then we get numsMap is [3:0, 2:1, 4:2]
+	numsMap := make(map[int]int)
+	for i, n := range nums {
+		numsMap[n] = i
+	}
+	for i, n := range nums {
+		needNum := target - n
+		if j, ok := numsMap[needNum]; ok == true {
+			if i == j {
+				continue
+			}
+			return []int{i, j}
+		}
+	}
+	return []int{0, 0}
+}
+```
+
+## 测试
+
+测试代码如下
+
+```go
+package solution
+
+import "testing"
+
+func TestTwoSum(t *testing.T) {
+
+	// 所有的测试用例
+	cases := []struct {
+		nums   []int
+		target int
+		want   []int
+	}{
+		{
+			nums: []int{3, 2, 4},
+			target: 6,
+			want: []int{1, 2},
+		},
+	}
+
+	// 遍历测试用例
+	for i, c := range cases {
+		ret := twoSum(c.nums, c.target)
+		if len(ret) != len(c.want) {
+			t.Errorf("no.%v case, len(ret) != len(want)", i)
+		}
+		for j:=0; j<len(ret); j++ {
+			if ret[j] != c.want[j] {
+				t.Errorf("no.%v case, ret[%v] != want[%v]", i, j, j)
+			}
+		}
+	}
+}
+```
